# benchlocal-cli

./: .gitignore  ATTRIBUTION.md  CHANGELOG.md  CODEX_BRIEF.md  CODEX_BRIEF_V2.md  CODEX_BRIEF_V3.md  CODEX_BRIEF_V4.md  CODEX_BRIEF_V6.md  CODEX_BRIEF_V7.md  CODEX_BRIEF_V7_1.md  CODEX_BRIEF_V7_3.md  CODEX_BRIEF_V7_4.md  CODEX_BRIEF_V8.md  CODEX_BRIEF_V9_0.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  cliff.toml  pyproject.toml
.github/workflows/: release.yml
benchlocal_cli/: __init__.py  cli.py  delta.py  history.py  inspect.py  persistence.py  rescore.py  retry_failed.py  runner.py  sandbox.py  selection.py  types.py
benchlocal_cli/packs/: aider-polyglot-30.jsonl  bugfind-15.jsonl  cli-40.jsonl  dataextract-15.jsonl  gpqa-diamond.jsonl  gsm-symbolic-30.jsonl  hermesagent-20.jsonl  humaneval-plus-30.jsonl  instructfollow-15.jsonl  lcb-v6-30.jsonl  reasonmath-15.jsonl  structoutput-15.jsonl  toolcall-15.jsonl
benchlocal_cli/scoring/: __init__.py  _stub.py  answer_match.py  common.py  data_extract.py  instruct_follow.py  reason_math.py  struct_output.py  tool_call.py
docs/: AIDER_POLYGLOT_30.md  CODEX_REPORT.md  DESIGN.md  EXTRACTOR_NOTES.md  HERMES_V073_AB.md  INTEGRATION.md  PACK_FORMAT.md  SANDBOX_PROTOCOL.md  VENDOR_SYNC.md  VERIFIER_FIDELITY_AUDIT.md
sandboxes/aider-polyglot/: Dockerfile  entrypoint.sh  server.py
sandboxes/bugfind/: Dockerfile  README.md  server.py
sandboxes/cli/: Dockerfile  README.md  server.py
sandboxes/code-reasoning/: Dockerfile  server.py
sandboxes/hermes/: Dockerfile  README.md  entrypoint.sh  server.py
scripts/: build-packs.js  sync-vendor.sh
tests/: test_aider_polyglot.py  test_cli_sandbox_log_dir.py  test_cloud_auth.py  test_delta.py  test_grader_fidelity.py  test_history.py  test_inline_retries.py  test_inspect.py  test_reasoning_handling.py  test_reasoning_packs.py  test_resume.py  test_retry_failed.py  test_sandbox_runner.py  test_sandbox_verifiers.py  test_scoring_smoke.py  test_selection.py  test_transient_retries.py
tools/: build-packs.js  build-sandboxes.sh  sync-vendor.sh  test-sandboxes.sh
