[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "benchlocal-cli"
version = "0.9.5"
description = "CLI port of BenchLocal quality bench packs — runs LLM behavioral evaluations against any OpenAI-compatible endpoint"
readme = "README.md"
authors = [
    { name = "noonghunna" },
]
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["llm", "benchmark", "evaluation", "tool-calling", "instruction-following", "structured-output", "benchlocal"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Stdlib-first design — keep deps minimal.
    # `httpx` for HTTP/2 + connection pooling against the OpenAI-compatible endpoint.
    "httpx>=0.27",
    # `jsonschema` for StructOutput-15 schema validation.
    "jsonschema>=4.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.10",
]
# `sandbox` extra for execution-backed packs. Current lifecycle uses the Docker
# CLI; the SDK extra is retained for future richer container inspection.
sandbox = [
    "docker>=7.0",
]

[project.scripts]
benchlocal-cli = "benchlocal_cli.cli:main"

[project.urls]
Homepage = "https://github.com/noonghunna/benchlocal-cli"
Repository = "https://github.com/noonghunna/benchlocal-cli"
Issues = "https://github.com/noonghunna/benchlocal-cli/issues"
Upstream = "https://github.com/stevibe/BenchLocal"

[tool.setuptools]
packages = ["benchlocal_cli", "benchlocal_cli.scoring"]
include-package-data = true

[tool.setuptools.package-data]
benchlocal_cli = ["packs/*.jsonl"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
